securitygroup.tf
resource "aws_security_group" "example" {
  vpc_id = aws_vpc.example.id
  name   = "scg-example"
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["3.112.23.0/29"] # EC2 Instance ConnectのCIDR
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
